--- a/07_Kalender.tex
+++ b/07_Kalender.tex
@@ -42,7 +42,7 @@
 18  & 27.10.2022    & DSL Gerät in Testanlage integriert                                                      \\ \hline   
 19  & 28.10.2022    & Testaufbau Wlan im Büro                                                      \\ \hline 
     &               &                                                       \\ \hline
-20  & 31.10.2022    & Bigfixing Integrationstest TFTP                                                      \\ \hline   
+20  & 31.10.2022    & Bugfixing Integrationstest TFTP                                                      \\ \hline   
 21  & 02.11.2022    & Teamtag vor Ort, Einführung in Architekur des Projekts 2                                                        \\ \hline   
 22  & 03.11.2022    & Einrichten des Entwicklungssetups für Signalrecorder                                                      \\ \hline   
 23  & 04.11.2022    & Fehlersuche "Error Received -19"                                                      \\ \hline 
