--- a/00_main.tex
+++ b/00_main.tex
@@ -78,7 +78,6 @@
 
 \pagestyle{empty} % Disable headers and footers for the following pages
 
-\includepdf[pages={1}]{Sperrvermerk.pdf}
 
 \tableofcontents % Print the table of contents itself
 
@@ -110,221 +109,221 @@
 % \part{TEIL 2}
 %----------------------------------------------------------------------------------------
 
-% \chapterimage{Pictures/csm_HKA_FK-MMT_Imagefoto_9847_0f123dde52.jpg} % Chapter heading image
+\chapterimage{Pictures/csm_HKA_FK-MMT_Imagefoto_9847_0f123dde52.jpg} % Chapter heading image
 
-% \chapter{Formatierungen und Templates}
+\chapter{Formatierungen und Templates}
 
-% \section{Table}\index{Table}
+\section{Table}\index{Table}
 
-% \begin{table}[h]
-% \centering
-% \begin{tabular}{l l l}
-% \toprule
-% \textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-% \midrule
-% Treatment 1 & 0.0003262 & 0.562 \\
-% Treatment 2 & 0.0015681 & 0.910 \\
-% Treatment 3 & 0.0009271 & 0.296 \\
-% \bottomrule
-% \end{tabular}
-% \caption{Table caption}
-% \label{tab:example} % Unique label used for referencing the table in-text
-% %\addcontentsline{toc}{table}{Table \ref{tab:example}} % Uncomment to add the table to the table of contents
-% \end{table}
+\begin{table}[h]
+\centering
+\begin{tabular}{l l l}
+\toprule
+\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
+\midrule
+Treatment 1 & 0.0003262 & 0.562 \\
+Treatment 2 & 0.0015681 & 0.910 \\
+Treatment 3 & 0.0009271 & 0.296 \\
+\bottomrule
+\end{tabular}
+\caption{Table caption}
+\label{tab:example} % Unique label used for referencing the table in-text
+%\addcontentsline{toc}{table}{Table \ref{tab:example}} % Uncomment to add the table to the table of contents
+\end{table}
 
-% Referencing Table \ref{tab:example} in-text automatically.
+Referencing Table \ref{tab:example} in-text automatically.
 
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Citation}\index{Citation}
+\section{Citation}\index{Citation}
 
-% This statement requires citation \cite{article_key}; this one is more specific \cite[162]{book_key}.
+This statement requires citation \cite{article_key}; this one is more specific \cite[162]{book_key}.
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Lists}\index{Lists}
+\section{Lists}\index{Lists}
 
-% Lists are useful to present information in a concise and/or ordered way\footnote{Footnote example...}.
+Lists are useful to present information in a concise and/or ordered way\footnote{Footnote example...}.
 
-% \subsection{Numbered List}\index{Lists!Numbered List}
+\subsection{Numbered List}\index{Lists!Numbered List}
 
-% \begin{enumerate}
-% \item The first item
-% \item The second item
-% \item The third item
-% \end{enumerate}
+\begin{enumerate}
+\item The first item
+\item The second item
+\item The third item
+\end{enumerate}
 
-% \subsection{Bullet Points}\index{Lists!Bullet Points}
+\subsection{Bullet Points}\index{Lists!Bullet Points}
 
-% \begin{itemize}
-% \item The first item
-% \item The second item
-% \item The third item
-% \end{itemize}
+\begin{itemize}
+\item The first item
+\item The second item
+\item The third item
+\end{itemize}
 
-% \subsection{Descriptions and Definitions}\index{Lists!Descriptions and Definitions}
+\subsection{Descriptions and Definitions}\index{Lists!Descriptions and Definitions}
 
-% \begin{description}
-% \item[Name] Description
-% \item[Word] Definition
-% \item[Comment] Elaboration
-% \end{description}
+\begin{description}
+\item[Name] Description
+\item[Word] Definition
+\item[Comment] Elaboration
+\end{description}
 
-% This is an example of theorems.
+This is an example of theorems.
 
-% \subsection{Several equations}\index{Theorems!Several Equations}
-% This is a theorem consisting of several equations.
+\subsection{Several equations}\index{Theorems!Several Equations}
+This is a theorem consisting of several equations.
 
-% \begin{theorem}[Name of the theorem]
-% In $E=\mathbb{R}^n$ all norms are equivalent. It has the properties:
-% \begin{align}
-% & \big| ||\mathbf{x}|| - ||\mathbf{y}|| \big|\leq || \mathbf{x}- \mathbf{y}||\\
-% &  ||\sum_{i=1}^n\mathbf{x}_i||\leq \sum_{i=1}^n||\mathbf{x}_i||\quad\text{where $n$ is a finite integer}
-% \end{align}
-% \end{theorem}
+\begin{theorem}[Name of the theorem]
+In $E=\mathbb{R}^n$ all norms are equivalent. It has the properties:
+\begin{align}
+& \big| ||\mathbf{x}|| - ||\mathbf{y}|| \big|\leq || \mathbf{x}- \mathbf{y}||\\
+&  ||\sum_{i=1}^n\mathbf{x}_i||\leq \sum_{i=1}^n||\mathbf{x}_i||\quad\text{where $n$ is a finite integer}
+\end{align}
+\end{theorem}
 
-% \subsection{Single Line}\index{Theorems!Single Line}
-% This is a theorem consisting of just one line.
+\subsection{Single Line}\index{Theorems!Single Line}
+This is a theorem consisting of just one line.
 
-% \begin{theorem}
-% A set $\mathcal{D}(G)$ in dense in $L^2(G)$, $|\cdot|_0$. 
-% \end{theorem}
+\begin{theorem}
+A set $\mathcal{D}(G)$ in dense in $L^2(G)$, $|\cdot|_0$. 
+\end{theorem}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Definitions}\index{Definitions}
+\section{Definitions}\index{Definitions}
 
-% This is an example of a definition. A definition could be mathematical or it could define a concept.
+This is an example of a definition. A definition could be mathematical or it could define a concept.
 
-% \begin{definition}[Definition name]
-% Given a vector space $E$, a norm on $E$ is an application, denoted $||\cdot||$, $E$ in $\mathbb{R}^+=[0,+\infty[$ such that:
-% \begin{align}
-% & ||\mathbf{x}||=0\ \Rightarrow\ \mathbf{x}=\mathbf{0}\\
-% & ||\lambda \mathbf{x}||=|\lambda|\cdot ||\mathbf{x}||\\
-% & ||\mathbf{x}+\mathbf{y}||\leq ||\mathbf{x}||+||\mathbf{y}||
-% \end{align}
-% \end{definition}
+\begin{definition}[Definition name]
+Given a vector space $E$, a norm on $E$ is an application, denoted $||\cdot||$, $E$ in $\mathbb{R}^+=[0,+\infty[$ such that:
+\begin{align}
+& ||\mathbf{x}||=0\ \Rightarrow\ \mathbf{x}=\mathbf{0}\\
+& ||\lambda \mathbf{x}||=|\lambda|\cdot ||\mathbf{x}||\\
+& ||\mathbf{x}+\mathbf{y}||\leq ||\mathbf{x}||+||\mathbf{y}||
+\end{align}
+\end{definition}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Notations}\index{Notations}
+\section{Notations}\index{Notations}
 
-% \begin{notation}
-% Given an open subset $G$ of $\mathbb{R}^n$, the set of functions $\varphi$ are:
-% \begin{enumerate}
-% \item Bounded support $G$;
-% \item Infinitely differentiable;
-% \end{enumerate}
-% a vector space is denoted by $\mathcal{D}(G)$. 
-% \end{notation}
+\begin{notation}
+Given an open subset $G$ of $\mathbb{R}^n$, the set of functions $\varphi$ are:
+\begin{enumerate}
+\item Bounded support $G$;
+\item Infinitely differentiable;
+\end{enumerate}
+a vector space is denoted by $\mathcal{D}(G)$. 
+\end{notation}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Remarks}\index{Remarks}
+\section{Remarks}\index{Remarks}
 
-% This is an example of a remark.
+This is an example of a remark.
 
-% \begin{remark}
-% The concepts presented here are now in conventional employment in mathematics. Vector spaces are taken over the field $\mathbb{K}=\mathbb{R}$, however, established properties are easily extended to $\mathbb{K}=\mathbb{C}$.
-% \end{remark}
+\begin{remark}
+The concepts presented here are now in conventional employment in mathematics. Vector spaces are taken over the field $\mathbb{K}=\mathbb{R}$, however, established properties are easily extended to $\mathbb{K}=\mathbb{C}$.
+\end{remark}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Corollaries}\index{Corollaries}
+\section{Corollaries}\index{Corollaries}
 
-% This is an example of a corollary.
+This is an example of a corollary.
 
-% \begin{corollary}[Corollary name]
-% The concepts presented here are now in conventional employment in mathematics. Vector spaces are taken over the field $\mathbb{K}=\mathbb{R}$, however, established properties are easily extended to $\mathbb{K}=\mathbb{C}$.
-% \end{corollary}
+\begin{corollary}[Corollary name]
+The concepts presented here are now in conventional employment in mathematics. Vector spaces are taken over the field $\mathbb{K}=\mathbb{R}$, however, established properties are easily extended to $\mathbb{K}=\mathbb{C}$.
+\end{corollary}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Propositions}\index{Propositions}
+\section{Propositions}\index{Propositions}
 
-% This is an example of propositions.
+This is an example of propositions.
 
-% \subsection{Several equations}\index{Propositions!Several Equations}
+\subsection{Several equations}\index{Propositions!Several Equations}
 
-% \begin{proposition}[Proposition name]
-% It has the properties:
-% \begin{align}
-% & \big| ||\mathbf{x}|| - ||\mathbf{y}|| \big|\leq || \mathbf{x}- \mathbf{y}||\\
-% &  ||\sum_{i=1}^n\mathbf{x}_i||\leq \sum_{i=1}^n||\mathbf{x}_i||\quad\text{where $n$ is a finite integer}
-% \end{align}
-% \end{proposition}
+\begin{proposition}[Proposition name]
+It has the properties:
+\begin{align}
+& \big| ||\mathbf{x}|| - ||\mathbf{y}|| \big|\leq || \mathbf{x}- \mathbf{y}||\\
+&  ||\sum_{i=1}^n\mathbf{x}_i||\leq \sum_{i=1}^n||\mathbf{x}_i||\quad\text{where $n$ is a finite integer}
+\end{align}
+\end{proposition}
 
-% \subsection{Single Line}\index{Propositions!Single Line}
+\subsection{Single Line}\index{Propositions!Single Line}
 
-% \begin{proposition} 
-% Let $f,g\in L^2(G)$; if $\forall \varphi\in\mathcal{D}(G)$, $(f,\varphi)_0=(g,\varphi)_0$ then $f = g$. 
-% \end{proposition}
+\begin{proposition} 
+Let $f,g\in L^2(G)$; if $\forall \varphi\in\mathcal{D}(G)$, $(f,\varphi)_0=(g,\varphi)_0$ then $f = g$. 
+\end{proposition}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Examples}\index{Examples}
+\section{Examples}\index{Examples}
 
-% This is an example of examples.
+This is an example of examples.
 
-% \subsection{Equation and Text}\index{Examples!Equation and Text}
+\subsection{Equation and Text}\index{Examples!Equation and Text}
 
-% \begin{example}
-% Let $G=\{x\in\mathbb{R}^2:|x|<3\}$ and denoted by: $x^0=(1,1)$; consider the function:
-% \begin{equation}
-% f(x)=\left\{\begin{aligned} & \mathrm{e}^{|x|} & & \text{si $|x-x^0|\leq 1/2$}\\
-% & 0 & & \text{si $|x-x^0|> 1/2$}\end{aligned}\right.
-% \end{equation}
-% The function $f$ has bounded support, we can take $A=\{x\in\mathbb{R}^2:|x-x^0|\leq 1/2+\epsilon\}$ for all $\epsilon\in\intoo{0}{5/2-\sqrt{2}}$.
-% \end{example}
+\begin{example}
+Let $G=\{x\in\mathbb{R}^2:|x|<3\}$ and denoted by: $x^0=(1,1)$; consider the function:
+\begin{equation}
+f(x)=\left\{\begin{aligned} & \mathrm{e}^{|x|} & & \text{si $|x-x^0|\leq 1/2$}\\
+& 0 & & \text{si $|x-x^0|> 1/2$}\end{aligned}\right.
+\end{equation}
+The function $f$ has bounded support, we can take $A=\{x\in\mathbb{R}^2:|x-x^0|\leq 1/2+\epsilon\}$ for all $\epsilon\in\intoo{0}{5/2-\sqrt{2}}$.
+\end{example}
 
-% \subsection{Paragraph of Text}\index{Examples!Paragraph of Text}
+\subsection{Paragraph of Text}\index{Examples!Paragraph of Text}
 
-% \begin{example}[Example name]
-% \lipsum[2]
-% \end{example}
+\begin{example}[Example name]
+\lipsum[2]
+\end{example}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Exercises}\index{Exercises}
+\section{Exercises}\index{Exercises}
 
-% This is an example of an exercise.
+This is an example of an exercise.
 
-% \begin{exercise}
-% This is a good place to ask a question to test learning progress or further cement ideas into students' minds.
-% \end{exercise}
+\begin{exercise}
+This is a good place to ask a question to test learning progress or further cement ideas into students' minds.
+\end{exercise}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Problems}\index{Problems}
+\section{Problems}\index{Problems}
 
-% \begin{problem}
-% What is the average airspeed velocity of an unladen swallow?
-% \end{problem}
+\begin{problem}
+What is the average airspeed velocity of an unladen swallow?
+\end{problem}
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Vocabulary}\index{Vocabulary}
+\section{Vocabulary}\index{Vocabulary}
 
-% Define a word to improve a students' vocabulary.
+Define a word to improve a students' vocabulary.
 
-% \begin{vocabulary}[Word]
-% Definition of word.
-% \end{vocabulary}
+\begin{vocabulary}[Word]
+Definition of word.
+\end{vocabulary}
 
 
-% %------------------------------------------------
+%------------------------------------------------
 
-% \section{Figure}\index{Figure}
+\section{Figure}\index{Figure}
 
-% \begin{figure}[h]
-% \centering\includegraphics[scale=0.5]{Pictures/placeholder.jpg}
-% \caption{Figure caption}
-% \label{fig:placeholder} % Unique label used for referencing the figure in-text
-% %\addcontentsline{toc}{figure}{Figure \ref{fig:placeholder}} % Uncomment to add the figure to the table of contents
-% \end{figure}
+\begin{figure}[h]
+\centering\includegraphics[scale=0.5]{Pictures/placeholder.jpg}
+\caption{Figure caption}
+\label{fig:placeholder} % Unique label used for referencing the figure in-text
+%\addcontentsline{toc}{figure}{Figure \ref{fig:placeholder}} % Uncomment to add the figure to the table of contents
+\end{figure}
 
-% Referencing Figure \ref{fig:placeholder} in-text automatically.
+Referencing Figure \ref{fig:placeholder} in-text automatically.
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
