--- a/structure_presentation.tex
+++ b/structure_presentation.tex
@@ -27,7 +27,41 @@
 
 % ALternative solution if could not use `fontspec`
 \usepackage[sfdefault]{carlito}
+\newcolumntype{x}[1]{>{\centering\arraybackslash\hspace{0pt}}p{#1}}
 
+
+\usepackage[backend=biber,]{biblatex}
+
+% \usepackage{setspace}
+% \linespread{2} 
+\usepackage{verbatim}
+\usepackage{ragged2e}
+
+% \newcommand{\covertextsize}{44}
+% \newcommand{\titletextsize}{32}
+% \newcommand{\contenttextsize}{18}
+
+\setbeamertemplate{itemize items}[circle]
+\setbeamertemplate{itemize subitem}[circle]
+\setbeamertemplate{itemize subsubitem}[circle]
+
+\setbeamertemplate{enumerate items}[default]
+
+\usepackage{calc}
+
+\usepackage{xparse,siunitx}
+
+\ExplSyntaxOn
+\DeclareExpandableDocumentCommand{\convertdim}{O{2}mm}
+ {
+  \fp_eval:n { round ( \dim_to_decimal_in_unit:nn { #2 } { 1#3 } , #1 ) }
+ }
+\ExplSyntaxOff
+
+\NewDocumentCommand{\getlengthin}{O{2}mm}
+ {%
+  \SI[round-mode=places,round-precision=#1]{\convertdim{#2}{#3}}{#3}%
+ }
 
 
 % \setsansfont{Carlito}[
@@ -37,6 +71,9 @@
 %  BoldFont = *-Bold,
 %  ItalicFont = *-Italic,
 %  BoldItalicFont = *-BoldItalic]
+
+\usepackage{color, colortbl}
+\usepackage{lipsum}  
 
 
 %% Cover page
@@ -57,74 +94,61 @@
 \newcommand \EITCoverVI[2]{
     \begin{frame}
 
-    \begin{tikzpicture}[remember picture, overlay]
-        \node[at=(current page.center)]{\includegraphics[width=\paperwidth, height=\paperheight]{Templates/HKA-Opening.pdf}};
+        \begin{tikzpicture}[remember picture, overlay]
+            \node[at=(current page.center)]{\includegraphics[width=\paperwidth, height=\paperheight]{Templates/HKA-Opening.pdf}};
 
-        \node[inner sep=0pt, text width=\paperwidth, anchor=south west] at ($(current page.center) + (-16cm, 2.6cm)$)
-        {\fontsize{44}{30}\selectfont\color{ThemeColor} #1};
-    \end{tikzpicture}
+            \node[inner sep=0pt, text width=\paperwidth, anchor=south west] at ($(current page.center) + (-16cm, 2.6cm)$)
+            {\fontsize{\covertextsize}{30}\selectfont\color{ThemeColor} #1};
+        \end{tikzpicture}
 
+        % Cover picture
+        \begin{tikzpicture}[remember picture, overlay]
+            \node[inner sep=0pt, anchor=north west] at ($(current page.west) + (0, 2.1cm)$)
+            {
+                \picdims[width=\paperwidth]{\paperwidth}{10.2cm}{Pictures/csm_HKA_FK-EIT_2017-9363_a9e6e1d039.jpg}
+            };
 
-    % Cover title
+            \node[inner sep=0pt, text width=\paperwidth, anchor=south west] at ($(current page.center) + (-16cm, -9cm)$)
+            {\fontsize{9.1}{5}\selectfont\color{ThemeColor} #2};
+        \end{tikzpicture}
 
-
-    % \begin{textblock*}{\textwidth}(0.028\paperwidth,0.327\paperheight)
-    %     \fontsize{44}{30}\selectfont\color{ThemeColor} #1
-    % \end{textblock*}
-
-    % Cover picture
-    \begin{tikzpicture}[remember picture, overlay]
-        \node[inner sep=0pt, anchor=north west] at ($(current page.west) + (0, 2.1cm)$)
-        {
-            \picdims[width=\paperwidth]{\paperwidth}{10.2cm}{Pictures/csm_HKA_FK-EIT_2017-9363_a9e6e1d039.jpg}
-        };
-
-        \node[inner sep=0pt, text width=\paperwidth, anchor=south west] at ($(current page.center) + (-16cm, -9cm)$)
-        {\fontsize{9.1}{5}\selectfont\color{ThemeColor} #2};
-    \end{tikzpicture}
-
-    % Author name
-
-    \begin{tikzpicture}[remember picture, overlay]
-        \node[at=(current page.center)]{\includegraphics[width=\paperwidth,         height=\paperheight]{Templates/HKA_Opening_KA_text.pdf}};
-    \end{tikzpicture}
+        \begin{tikzpicture}[remember picture, overlay]
+            \node[at=(current page.center)]{\includegraphics[width=\paperwidth, height=\paperheight]{Templates/HKA_Opening_KA_text.pdf}};
+        \end{tikzpicture}
     \end{frame}
 }
+
+% \setbeamertemplate{frametitle}
+% {
+%     \begin{tikzpicture}[remember picture, overlay]
+%         \node[inner sep=0pt, text width=\paperwidth, anchor=north west] at ($(current page.center) + (-16cm, 8.7cm)$)
+%         {\fontsize{\titletextsize}{2}\selectfont\color{ThemeColor} \insertframetitle};
+%     \end{tikzpicture}
+% }
 
 \setbeamertemplate{frametitle}
 {
     \begin{tikzpicture}[remember picture, overlay]
-        \node[inner sep=0pt, text width=\paperwidth, anchor=north west] at ($(current page.center) + (-16cm, 8.7cm)$)
-        {\fontsize{32}{5}\selectfont\color{ThemeColor} \insertframetitle};
+        \node[inner sep=0pt, text width=\paperwidth, anchor=north west] at ($(current page.north west) + (\leftmarginpos, \topmargintitle)$)
+        {\fontsize{\titletextsize}{2}\selectfont\color{ThemeColor} \insertframetitle};
     \end{tikzpicture}
 }
-
-% \setbeamertemplate{footline}
-% {
-%     \begin{tikzpicture}[remember picture, overlay]
-%         \node[inner sep=0pt, text width=\paperwidth, anchor=north west] at ($(current page.center) + (-16cm, -7.5cm)$)
-%             {\fontsize{10}{13}\selectfont\color{ThemeColor} 
-%                 Hochschule Karlsruhe \\
-%                 \usvardate\today \\
-%                 \insertframenumber
-%             };
-%     \end{tikzpicture} 
-
-% % \quad\hfill\insertframenumber\strut\quad
-
-% }
 
 \usepackage[]{datetime}
 \newdateformat{usvardate}{%
     \monthname[\THEMONTH] \THEYEAR}
 
-\newcommand \EITHeadlineFT[2]{
+% \setbeamersize{text margin left=0pt,text margin right=1.5cm}
+
+\settowidth{\leftmargini}{\usebeamertemplate{itemize item}}
+\addtolength{\leftmargini}{1.5\labelsep}
+
+\newcommand \EITHeadline[2]{
     \begin{frame}
         % Cover title
         \frametitle{#1}
 
         {#2}
-
 
         \begin{tikzpicture}[remember picture, overlay]
             \node[inner sep=0pt, text width=\paperwidth, anchor=north west] at ($(current page.center) + (-16cm, -7.5cm)$)
@@ -141,11 +165,61 @@
     \end{frame}
 
 }
+\newcommand \EITHeadlineFT[2]{
+    \EITHeadline{#1}{
+        \begin{textblock*}{\maximumwidth}(\leftmarginpos,\topmargincontent)
+            {   \fontsize{\contenttextsize}{32}\selectfont 
+                #2}
+        \end{textblock*}    
+    }
+}
+
+\newcommand \EITHeadlineFTTwoColumn[5]{
+    \EITHeadline{#1}{
+        \begin{textblock*}{\columnmaxwidth}(\leftmarginpos,\topmargincontent)
+            {   \fontsize{\contenttextsize}{32}\selectfont 
+                #4}
+        \end{textblock*}
+
+        \begin{textblock*}{\columnmaxwidth}(\secondcolumnstart,\topmargincontent)
+            {   \fontsize{\contenttextsize}{32}\selectfont 
+                #5}
+        \end{textblock*}
+    }
+}
+
+\setbeamercolor{section in toc}{fg=black}
+\setbeamerfont{section in toc}{size=\huge}
+
+% \setbeamertemplate{section in toc}{\inserttocsection}
+% \setbeamertemplate{section in toc}[circle]
+% \setbeamertemplate{section in toc}[ball unnumbered]
+% \setbeamertemplate{section in toc}[square]
+% \setbeamertemplate{section in toc}{\inserttocsectionnumber.~\inserttocsection}
+\setbeamertemplate{section in toc}[ball]
+
+\usepackage{setspace}
 
 \newcommand \EITTableOfContent{
     \EITHeadlineFT{Table Of Contents}{
-        \tableofcontents
+        \begin{spacing}{5}
+            \tableofcontents 
+        \end{spacing}
     }
 }
+
+
+\newcommand \EITOnePicture[2]{
+    \EITHeadlineFT{#1}{
+        \begin{tikzpicture}[remember picture, overlay]
+            \node[inner sep=0pt, anchor=north west] at ($(current page.west) + (0, 2.1cm)$)
+            {
+                \picdims[width=\paperwidth]{\paperwidth}{10.2cm}{#2}
+            };            
+        \end{tikzpicture}
+    }
+}
+
+
 
 %%
